--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1><a href="index.html">WEP</a></h1>
+  <h1><a href="index.html">쉼필쓰~</a></h1>
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
@@ -14,7 +14,7 @@
   </ol>
 
 
-  <h2>JavaScript이란 무엇인가??</h2>
+  <h2>심필이란 무엇인가??</h2>
   <p><a href="https://www.naver.com/" target="_blank" title="naver">
   Hypertext Markup Language (HTML)</a>
   is the standard Markup
